# a2vga_audio

./: README.md
firmware/: PicoPal.jed
firmware/Release/: A2USB-MOUSE-NTSC-A2VGA-4ns-v1.3.uf2  A2USB-MOUSE-PAL-A2VGA-4ns-v1.3.uf2  applevga.uf2  readme.md  v2-analog-lc-4ns-vga.uf2  v2-analog-preloader.uf2
firmware/analog-firmware-main-lc-4ns-vga/: CMakeLists.txt
firmware/analog-firmware-main-lc-4ns-vga/audio/: CMakeLists.txt  audinterface.c  audinterface.h  audio.c  audio.h
firmware/analog-firmware-main-lc-4ns-vga/common/: abus-4ns.pio  abus-8ns.pio  abus-gs-4ns.pio  abus-gs-8ns.pio  abus.c  abus.h  abus.pio  build.h  cfgtoken.h  config.c  config.h  dmacopy.c  dmacopy.h  flash.c  flash.h  main.c
firmware/analog-firmware-main-lc-4ns-vga/submodules/emu2149/: CMakeLists.txt
firmware/analog-firmware-main-lc-4ns-vga/vga/: businterface.c  businterface.h  hires_color_patterns.h  hires_dot_patterns.h  render.c  render.h  render_80col.c  render_dgr.c  render_dhgr.c  render_hires.c  render_lores.c  render_shr.c  render_test.c  render_text.c  vga9.pio  vgabuf.c  vgabuf.h  vgamain.c  vgaout.c  vgaout.h
firmware/analog-firmware-main-lc-4ns-vga/z80/: businterface.c  businterface.h  z80buf.h  z80main.c  z80rom.h
firmware/apple2vga/: CMakeLists.txt  README.md  abus.c  board_config.h  main.c  render.h  vga.c  vga.h  vga.pio
hardware/: a2vga_audio.dch  a2vga_audio.dip  a2vga_audio_rev_0_2.dch  a2vga_audio_rev_0_2.dip  a2vga_audio_rev_0_3.dip
